--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
                 alt="Людина працює за комп'ютером"
                 width="370"
               />
+              <div class="work-wrap">
+                <p class="work-text">ДЕСКТОПНІ ДОДАТКИ</p>
+              </div>
+             
             </li>
             <li class="work-images">
               <img
@@ -133,6 +137,9 @@
                 alt="Людина працює зі смартфоном перед комп'ютером"
                 width="370"
               />
+              <div class="work-wrap">
+                <p class="work-text">МОБІЛЬНІ ДОДАТКИ</p>
+              </div>
             </li>
             <li class="work-images">
               <img
@@ -140,6 +147,9 @@
                 alt="На екрані планшета зображено багато кольорів"
                 width="370"
               />
+              <div class="work-wrap">
+                <p class="work-text">ДИЗАЙНЕРСЬКІ РІШЕННЯ</p>
+              </div>
             </li>
           </ul>
         </div>
